--- a/MyExpenseManagement/MyExpenseManagement/MyExpenseManagement.csproj
+++ b/MyExpenseManagement/MyExpenseManagement/MyExpenseManagement.csproj
@@ -50,6 +50,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="ColorPicker.Maui" Version="1.1.0-dev.1" />
+	  <PackageReference Include="CommunityToolkit.Maui" Version="1.3.0" />
 	  <PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="2.88.2" />
 	  <PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
 	</ItemGroup>
@@ -67,6 +68,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Views\Controls\BorderedControl.xaml.cs">
+	    <DependentUpon>BorderedControl.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Views\ExpensePage.xaml.cs">
 	    <DependentUpon>ExpensePage.xaml</DependentUpon>
 	  </Compile>
@@ -80,6 +84,12 @@
 
 	<ItemGroup>
 	  <MauiXaml Update="Views\Controls\CategoriesControl.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Controls\BorderedControl.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Controls\TotalExpenseControl.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\ExpensePage.xaml">
